--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "googleapis": "^155.0.0",
     "mongoose": "^8.17.0"
   },
   "devDependencies": {
